--- a/Front/src/style.css
+++ b/Front/src/style.css
@@ -4,13 +4,28 @@
     
   }
 @font-face {
-    font-family: 'helvetica-37';
+    font-family: 'helvetica-35';
     src: url('./fonts/HELVETICANEUELTPRO-TH.ttf') format('truetype');
+
+  }
+@font-face {
+    font-family: 'helvetica-37';
+    src: url('./fonts/HELVETICANEUELTPRO-THCN.ttf') format('truetype');
+
+  }
+@font-face {
+    font-family: 'helvetica-25';
+    src: url('./fonts/HELVETICANEUELTPRO-ULTLT.ttf') format('truetype');
 
   }
   @font-face {
     font-family: 'steiner-light';
     src: url('./fonts/STEINER-LIGHT.ttf') format('truetype');
+
+  }
+  @font-face {
+    font-family: 'steiner-regular';
+    src: url('./fonts/STEINER-NORMAL.ttf') format('truetype');
 
   }
 body { 
@@ -21,6 +36,11 @@ body {
 
     
 }
+.pre{
+    font-family: 'helvetica-37';
+    font-size: 12.8px;
+    color: #132336;
+}
 .container{
     display: flex;
     flex-direction: column;
@@ -29,19 +49,22 @@ body {
     justify-content: space-around;
 }
 .divcontainer{
-    padding-top: 221px;
+    padding-top: 181px;
     width:100vw
 }
 nav{
     
     font-size: 2.441em;
     position: absolute;
-    bottom: 55px;
+    bottom: 30px;
    
     left: 0;
-    padding:55px;
+    padding:30px;
     transition: bottom 0.3s ease;
 
+}
+nav a{
+    font-family: 'helvetica-35';
 }
 
 p,a,ul,li,ol {
@@ -53,10 +76,10 @@ p,a,ul,li,ol {
 }
 ul,li {
     padding: 0;
-
+    
 }
 h1{
-    font-family: 'helvetica-37';
+    font-family: 'helvetica-35';
     font-weight: 400;
     font-size: 1.953em;
 }
@@ -64,11 +87,12 @@ h1{
 
 #logo{
    
-    width: 226px;
+    width: 251px;
     max-width: 100vw;
     position: fixed;
     left: 0;
-    padding-left: 55px;
+    padding-left: 30px;
+    
     
     
 }
@@ -90,8 +114,8 @@ h1{
     bottom: 500px;
     right: 0;
     left: 0;
-    padding-left: 55px;
-    padding-right: 55px;
+    padding-left: 30px;
+    padding-right: 30px;
     min-height:50vh ;
     bottom: 0;
     transition: bottom 0.3s ease-out;
@@ -107,8 +131,8 @@ h1{
     background-color:#132336 ;
     height: 10px;
     width: 10px;
-    margin-top: 55px;
-    margin-left: 55px;
+    margin-top: 30px;
+    margin-left: 30px;
     
 }
 .arrow {
@@ -142,29 +166,34 @@ h1{
 }
 .h1Recipe{
     position:fixed;
-    top: 120px;
+    font-family: 'helvetica-35';
+    top: 89px;
     left:0;
-    padding-left: 55px;
+    padding-left: 30px;
+    font-size: 1.952em;
+    letter-spacing: 6px;
     animation: mymove 1s ease ;
 }
 .recipeFilter ul a{
-    padding-left: 40px;
+    padding-left: 30px;
     font-size: 0.8em;
       white-space: nowrap;
 }
 
-@keyframes mymove {
+@keyframes mymove { 
   from {opacity: 0;}
   to {opacity: 1;}
 }
 .recipeFilter{
     position: fixed;
-    top: 200px;
-    left: 0px;
+    top: 160px;
+    left: -1px;
+    max-width: 100%;
     min-width: 100%;
     border: 0.5px #132336 solid ;
     height: 19px;
-
+    /* overflow-x: auto; Permite el desbordamiento horizontal */
+    white-space: nowrap; /* Evita el ajuste de línea */
     
     
     animation: mymove 1.2s ease;
@@ -177,15 +206,58 @@ h1{
 
 }
 .recipe{
-    border-bottom: 0.5px solid #132336 ;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    animation: mymove 0.5s ease;
+
+}
+.recipe1{
+    margin: 0;
+    margin-top: 28px;
+    
+
+
+}
+.recipe1 p{
+    margin: 0;
+    font-family: 'steiner-regular';
+    letter-spacing: 1.5px;
+    font-size: 1.25em
+
+}
+.recipe h1{
+    font-family: 'steiner-regular';
+    font-size: 2.441em;
+    margin-bottom:0
+}
+
+.recipeItem{
+    border-bottom: 0.5px solid #13233685 ;
     display: flex;
     justify-content: space-between;
+
    
 
+}
+.recipeinfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.instrucciones{
+    font-size: 0.8em;
+    margin-top: 36px;
 }
 .descripicionRecipe{
     width: 150px; /* Ancho máximo del contenedor, ajusta según tus necesidades */
     white-space: nowrap; /* Evita saltos de línea */
     overflow: hidden; /* Oculta el texto que desborda el contenedor */
     text-overflow: ellipsis;
+    font-size: 0.8em;
+}
+.recipeIndex{
+    animation: mymove .5s ease ;
 }
